# repodocs

./: .gitignore  Cargo.toml  LICENSE  README.md  repodocs.toml  sample_config.toml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/cloner/: git_cloner.rs  mod.rs
src/extractor/: file_extractor.rs  mod.rs  output_manager.rs
src/scanner/: document_scanner.rs  file_filter.rs  mod.rs
src/ui/: mod.rs  output.rs  progress.rs  signals.rs
