[package]
name = "repodocs"
version = "1.0.0"
edition = "2021"
authors = ["RepoDocs Contributors"]
license = "MIT"
description = "Extract documentation from GitHub repositories"
homepage = "https://github.com/user/repodocs"
repository = "https://github.com/user/repodocs"
keywords = ["cli", "documentation", "git", "github", "extraction"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "repodocs"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env", "unicode"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# URL parsing and validation
url = "2.4"

# Git operations
git2 = "0.18"

# Filesystem operations
walkdir = "2.5"
tempfile = "3.8"

# Pattern matching
regex = "1.10"

# Progress bars and terminal output
indicatif = "0.17"
console = "0.15"

# Signal handling
ctrlc = "3.4"

# JSON output support
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# Cross-platform support
num_cpus = "1.16"

# File time handling
filetime = "0.2"

# Parallel processing (optional, for performance optimization)
rayon = { version = "1.8", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[features]
default = []
parallel = ["rayon"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"